--- a/sdf_asp_net/Views/Account/EmailConfirmed.cshtml
+++ b/sdf_asp_net/Views/Account/EmailConfirmed.cshtml
@@ -13,7 +13,7 @@
         {
             @Html.AntiForgeryToken()
             <div class="col-md-8">
-                <p> Welcome  @ViewBag.Email Ihre Konto wurde mit erfolg bestätigt .Um Sie sich einzuloggen Klicken Sie hier darauf  </p>
+                <p> Welcome  @ViewBag.Email Ihr Konto wurde erfolgreich verifiziert. Bitte folgen Sie dem Link, um sich einzuloggen!  </p>
 
                 <p>
                     @Html.ActionLink("Login", "Login")
