some more changes to routing and click events

--- a/sdf_asp_net/Views/Project/Index.cshtml
+++ b/sdf_asp_net/Views/Project/Index.cshtml
@@ -250,7 +250,7 @@
         <script>
             
              
-            var wich = "";
+            var wich = "txtMessage";
 
                 $("#c").click(function (event) {
                     $(":hidden").css("visibility", "visible");
